1998-07-08  Chris Lahey  <clahey@umich.edu>

	* menus.c (gE_menus_init): Added some example code relating to an
	idea I have about configurability.

	* menus.c (gE_menus_init): Made it so that there wasn't a
	separator at the bottom of the plugins list.

1998-07-08  Evan Lawrence <evan@worldpath.net>

	* Made some changes to the gtk-only automatic plugin detection, although it's still broken.
	
	* Disabled the CAN_FOCUS flag on the scrollbar, line number button, and notebook tabs
	  (On Chris's suggestion) - makes editting much smoother..
	
	* While I was at it made it so the titlebar changes to reflect the current document tab selected.

1998-07-08  Chris Lahey  <clahey@umich.edu>

	* gE_plugin_api.c (add_plugin_to_menu): Fixed the menus to display correctly.

1998-07-08  Chris Lahey  <clahey@umich.edu>

	* plugin.c (plugin_query_all): Synced up changes from go to have
	it not detect "." and ".." as plugins.

	* gE_plugin_api.c (add_plugin_to_menu): Added a second GnomeUIInfo
	to be the GNOME_APP_UI_ENDOFINFO entry.

1998-07-07  Evan Lawrence <evan@worldpath.net>

	* Some changes to the gtk-only menu code, and started
	  on automatic plugin detection...

1998-07-02  Chris Lahey  <clahey@umich.edu>

	* client.h: Added stuff to support using client.h in a C++ file.

	* plugin.h: 
	* plugin.c (plugin_new_with_query): 
	* client.c (client_init):
	Added stuff to better support passing parameters to plugins.

1998-07-02  Chris Lahey  <clahey@umich.edu>

	* reverse.c:
	* cvsdiff.c: 
	* diff.c: Added registration stuff.

	* plugin.c:
	* plugin.h:
	* client.h: 
	* client.c: Added stuff to do querying.  Also added a quit program
	function.

	* gE_document.c: 
	* Makefile.am: Made plugins install to a different directory.

1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gedit.desktop: Added Portuguese translation.

1998-06-30  Chris Lahey  <clahey@umich.edu>

	* main.h:
	* reverse.c (main): New file
	* Makefile.am (reverse_plugin_SOURCES): 