@@ -1,6 +1,7 @@
 Known bugs in the current version of gEdit:
 
 	* Occasionally crashes when you open eight or more files at a time.
+	  (This one may be fixed, but be warned)
 
 	* Changes to the font will not take effect until gEdit is restarted.
 	  
@@ -10,5 +11,5 @@ Known bugs in the current version of gEdit:
 	* If you try to print a new (Untitled) file, gEdit will sigsegv. (Save
 	  the file before printing)
 
-	
+
 
