@@ -1,3 +1,14 @@
+1998-07-10  Evan Lawrence <evan@worldpath.net>
+
+	* New document tabs are automatically switched too now..
+
+	* Changed the statusbar so it's actually a gtk_label,
+	  instead of a gtk_statusbar, to fix a mem leak..
+
+1998-07-10  Evan Lawrence <evan@worldpath.net>
+
+	* I *think* I fixed all the bugs I added in my previous commit...
+
 1998-07-08  Chris Lahey  <clahey@umich.edu>
 
 	* menus.c (gE_menus_init): Added some example code relating to an
